# OMM_Antisaccades

./: README.md  xmldiff.sh
analysis/: AS_explore.m  AS_healthy.m  getRTs.m  plottest.m  read_saccsim_side.m  test_find_saccade_end.m
c++/: CMakeLists.txt  centroid.cpp  eyeframe.h  pseudoeye.cpp  worldDataMaker.cpp  worldframe.cpp  worldframe.h
config/: luminances.json
docs/: AS_studiesSignificance.ods  AS_studiesSummary.ods  Antisaccades paper outline.odt  Feb2016Meeting.pptx  Good discussions in papers to refer to.odt  hypothesisVsLiterature_thoughts.odt  increasingVarianceProblems.odt
scripts/: AS_healthy.sh  AS_healthy_display.sh
sim5_full_model/: AsstvMSN.xml  D1MSN.xml  D2MSN.xml  LINlinear.xml  LINlinearNoisy.xml  LINsaccade.xml  LIPinput.xml  LIPinput_1.xml  OccularMotorModel.proj  PFCLIN.xml  PFCinput.xml  PFCinputMain.xml  PFCinputSimple.xml  PFCinputTemp.xml  PrestimIntegrate.xml  WorldToBrain.xml  experiment1.xml  experiment10.xml  experiment11.xml  experiment12.xml  experiment13.xml  experiment14.xml  experiment15.xml  experiment16.xml  experiment17.xml  experiment18.xml  experiment19.xml  experiment2.xml  experiment20.xml  experiment21.xml  experiment22.xml  experiment5.xml  experiment6.xml  experiment7.xml  experiment8.xml  experiment9.xml  external.xsl  fixateInhibit.xml  metaData.xml  model.xml
spineml/: AsstvMSN.xml  D1MSN.xml  D2MSN.xml  LINlinear.xml  LINlinearNoisy.xml  LINsaccade.xml  LIPinput.xml  OccularMotorModel.proj  PFCLIN.xml  PFCinput.xml  PFCinputMain.xml  PFCinputSimple.xml  PrestimIntegrate.xml  WorldToBrain.xml  addJitter.xml  experiment0.xml  experiment1.xml  experiment10.xml  experiment11.xml  experiment12.xml  experiment13.xml  experiment14.xml  experiment15.xml  experiment16.xml  experiment17.xml  experiment18.xml  experiment19.xml  experiment2.xml  experiment20.xml  experiment21.xml  experiment22.xml  experiment23.xml  experiment24.xml  experiment25.xml  experiment26.xml  experiment27.xml  experiment28.xml  experiment29.xml  experiment3.xml  experiment30.xml  (+15 more)
tmp/: README.md
